--- a/ipetour/index.html
+++ b/ipetour/index.html
@@ -7,7 +7,11 @@
     <title>IpeTour Operadora</title>
   </head>
   <body>
+
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
+    <style>
+      @import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap');
+    </style>
   </body>
 </html>
